@@ -1,3 +1,8 @@
+2007-06-11  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/scene/human.py: Clicking a second time on a selected square
+	  deselects it (sf.net bug #1729938)
+
 2007-06-10  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/ai.py: Use correct pid not 0 for killing AIs (Bug #443073)
